prevent overflow with scroll bars

--- a/docs/splitter.css
+++ b/docs/splitter.css
@@ -18,6 +18,7 @@ html, body, #app
   border-left: 2px solid #dde1e4;
   background-color: #fff;
   overflow: hidden;
+  overflow: scroll
 }
 
 #container {
